# snake-game

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: static.yml
backend/src/: game.rs  websocket_session.rs
backend/src/game/: coordinate.rs  map.rs
src/: App.tsx  browser.rs  game.rs  index.css  lib.rs  main.rs  messages.rs  websocket_actor.rs
src/components/: Error.module.scss  Error.tsx  Game.module.scss  Game.tsx  Lobby.module.scss  Lobby.tsx
src/components/Modal/: Error.module.scss  Error.tsx
src/game/: coordinate.rs  engine.rs  pellet.rs  snake.rs  view.rs
src/services/: GameEngine.ts
src/services/game/: Cargo.toml
src/services/game/src/: coordinate.rs  engine.rs  lib.rs  map.rs  pellet.rs  snake.rs  view.rs
src/services/renderer/: Cargo.toml
src/services/renderer/src/: browser.rs  lib.rs  types.rs
src/services/server/: .gitignore  Cargo.toml  README.md
src/services/server/src/: main.rs  messages.rs  websocket_actor.rs  websocket_session.rs
src/services/server/src/game/: view.rs
src/types/: index.ts  mod.rs
