[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook= "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [ # Ref: https://rustwasm.github.io/wasm-bindgen/api/web_sys/
  "console",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "WebSocket",
  "MessageEvent"
]

[target."cfg(debug_assertions)".dpendencies]
console_error_panic_hook = "0.1"
