[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.6.1", features = [ "v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
num-traits = "0.2.7"
