[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook= "0.1"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
game = { path = "../game" }

[dependencies.web-sys]
version = "0.3"
features = [ # Ref: https://rustwasm.github.io/wasm-bindgen/api/web_sys/
  "console",
  "Document",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "WebSocket",
  "MessageEvent",
  "MouseEvent",
  "Performance",
  "Blob",
  "FileReader",
  "BinaryType",
]
