[package]
name = "snake-game-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = {version = "4.4.0", features = ["openssl"]}
actix-web-actors = "4.2.0"
openssl = { version = "0.10", features = ["v110"] }
uuid = { version = "1.6.1", features = [ "v4"] }
serde_json = "1.0"
dotenvy = "0.15.7"
game = { path = "../game" }
